--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "mode": "auto",
             "program": "C:\\work\\git\\calmrobot\\cmd\\calmrobot\\main.go",
             "env": {},
-            "args": []
+            "args": ["-images"]
         }
     ]
 }
